--- a/pom.xml
+++ b/pom.xml
@@ -378,6 +378,7 @@
 
     <properties>
         <client-version>${project.version}</client-version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
 </project>
