--- a/test/pom.xml
+++ b/test/pom.xml
@@ -140,6 +140,8 @@
         <specs-version>1.7.1</specs-version>
         <mockito-version>1.9.0</mockito-version>
         <powermock-version>1.4.10</powermock-version>
+
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
 </project>
