--- a/logger/pom.xml
+++ b/logger/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>com.crashnote</groupId>
     <artifactId>crashnote-logger</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.3-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Crashnote Logger Module</name>
@@ -47,7 +47,7 @@
     <parent>
         <groupId>com.crashnote</groupId>
         <artifactId>parent</artifactId>
-        <version>0.0.3</version>
+        <version>0.0.3-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
 
@@ -87,7 +87,7 @@
                 <dependency>
                     <groupId>com.crashnote</groupId>
                     <artifactId>crashnote-core</artifactId>
-                    <version>0.0.3</version>
+                    <version>0.0.3-SNAPSHOT</version>
                 </dependency>
             </dependencies>
 
