--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,7 @@
                 <version>2.7</version>
                 <configuration>
                     <skip>true</skip>
+                    <updateReleaseInfo>true</updateReleaseInfo>
                 </configuration>
             </plugin>
 
@@ -290,20 +291,6 @@
                     <name>develop</name>
                 </property>
             </activation>
-
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <artifactId>maven-jar-plugin</artifactId>
-                            <version>2.3.2</version>
-                            <configuration>
-                                <classifier>dev</classifier>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
         </profile>
 
         <profile>
