--- a/test/pom.xml
+++ b/test/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>com.crashnote</groupId>
     <artifactId>crashnote-test</artifactId>
-    <version>0.0.3-SNAPSHOT</version>
+    <version>0.0.3</version>
     <packaging>jar</packaging>
 
     <!-- ==== Artifact is NOT deployed, only used for internal testing purposes ==== -->
