--- a/servlet/src/test/resources/web.xml
+++ b/servlet/src/test/resources/web.xml
@@ -34,12 +34,12 @@
 
     <!-- ERROR FILTER -->
     <filter>
-        <filter-name>DefaultFilter</filter-name>
+        <filter-name>ErrorFilter</filter-name>
         <filter-class>com.crashnote.servlet.test.defs.ErrorFilter</filter-class>
     </filter>
 
     <filter-mapping>
-        <filter-name>DefaultFilter</filter-name>
+        <filter-name>ErrorFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
