--- a/android/src/main/resources/About.java.template
+++ b/android/src/main/resources/About.java.template
@@ -15,9 +15,15 @@
  */
 package com.crashnote;
 
+/**
+ * Name and version of the notifier (added at compile time).
+ * Not using property files since some platforms (e.g. AppEngine) seem to have problems with that.
+ */
 public class About {
 
-    public static final String NAME = "${client-name}";
+    public static final String NAME = "@name@";
 
-    public static final String VERSION = "${client-version}";
+    public static final String VERSION = "@version@";
+
+    public static final String TIMESTAMP = "@timestamp@";
 }
