--- a/core/pom.xml
+++ b/core/pom.xml
@@ -32,12 +32,31 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <groupId>com.google.code.maven-replacer-plugin</groupId>
+                <artifactId>maven-replacer-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <configuration>
+                    <sources>
+                        <source>target/gen-src</source>
+                    </sources>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
     <profiles>
         <profile>
             <id>develop</id>
+
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
 
             <build>
                 <plugins>
@@ -55,5 +74,9 @@
             </build>
         </profile>
     </profiles>
+
+    <properties>
+        <client-name>cn-core</client-name>
+    </properties>
 
 </project>
