fixed attribution for checksum algorithm

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -67,6 +67,7 @@
                             <excludes>
                                 <exclude>**/build/json/**/*.java</exclude>
                                 <exclude>**/BoundedList.java</exclude>
+                                <exclude>**/ChksumUtil.java</exclude>
                             </excludes>
                         </configuration>
                     </plugin>
