--- a/logger/pom.xml
+++ b/logger/pom.xml
@@ -115,7 +115,7 @@
                         <artifactId>build-helper-maven-plugin</artifactId>
                         <configuration>
                             <sources>
-                                <source>target/gen-src</source>
+                                <source>src/main/generated</source>
                                 <source>../core/src/main/java</source>
                             </sources>
                         </configuration>
