--- a/appengine/pom.xml
+++ b/appengine/pom.xml
@@ -140,7 +140,7 @@
                         <artifactId>build-helper-maven-plugin</artifactId>
                         <configuration>
                             <sources>
-                                <source>target/gen-src</source>
+                                <source>src/main/generated</source>
                                 <source>../core/src/main/java</source>
                                 <source>../logger/src/main/java</source>
                                 <source>../servlet/src/main/java</source>
