--- a/servlet/pom.xml
+++ b/servlet/pom.xml
@@ -133,7 +133,7 @@
                         <artifactId>build-helper-maven-plugin</artifactId>
                         <configuration>
                             <sources>
-                                <source>target/gen-src</source>
+                                <source>src/main/generated</source>
                                 <source>../core/src/main/java</source>
                                 <source>../logger/src/main/java</source>
                             </sources>
