--- a/parents/module/pom.xml
+++ b/parents/module/pom.xml
@@ -22,11 +22,11 @@
 
     <dependencies>
 
-        <!-- JDK 1.5 Signature -->
+        <!-- JDK Signatures -->
         <dependency>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>animal-sniffer-annotations</artifactId>
-            <version>1.6</version>
+            <version>1.7</version>
             <optional>true</optional>
         </dependency>
 
@@ -83,8 +83,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
+                    <source>1.6</source>
+                    <target>1.6</target>
                     <debug>false</debug>
                     <optimize>true</optimize>
                     <encoding>UTF-8</encoding>
@@ -124,7 +124,7 @@
                 </configuration>
             </plugin>
 
-            <!-- verify that code is backwards compatible to JDK 1.5 -->
+            <!-- verify that code is backwards compatible to JDK 1.6 -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>animal-sniffer-maven-plugin</artifactId>
@@ -139,7 +139,7 @@
                         <configuration>
                             <signature>
                                 <groupId>org.codehaus.mojo.signature</groupId>
-                                <artifactId>java15</artifactId>
+                                <artifactId>java16</artifactId>
                                 <version>1.0</version>
                             </signature>
                         </configuration>
