--- a/modules/servlet/src/main/resources/crashnote.servlet.conf
+++ b/modules/servlet/src/main/resources/crashnote.servlet.conf
@@ -9,11 +9,11 @@ crashnote {
     }
 
     request {
-        skip-session = true
-        skip-headers = false
+        exclude-session = true
+        exclude-headers = false
 
         # ignore requests made from local machine
-        skip-localhost = true
+        ignore-localhost = true
 
         # hash remote IPs (might not be legal in some countries, force user to enable manually)
         hash-ip = true
