updated default environment variable filter

--- a/modules/core/src/main/resources/crashnote.default.conf
+++ b/modules/core/src/main/resources/crashnote.default.conf
@@ -28,6 +28,7 @@ crashnote {
     }
 
     filter {
-        environment = [".*aws.*", ".*key.*", ".*password.*"]
+        # filter common environment variables by default
+        environment = [".*aws.*", ".*key.*", ".*secret.*", ".*_URL"]
     }
 }
