--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 
 language: scala
 scala:
-  - 2.9.1
+  - 2.9.2
 
 branches:
   only:
@@ -15,3 +15,5 @@ notifications:
 
 jdk:
   - openjdk6
+  - openjdk7
+  - oraclejdk7
