changed API target from "api.crashnote.com" to "send.crashnote.com"

--- a/modules/core/src/main/resources/crashnote.default.conf
+++ b/modules/core/src/main/resources/crashnote.default.conf
@@ -17,7 +17,7 @@ crashnote {
     }
 
     network {
-        host = "api.crashnote.com"
+        host = "send.crashnote.com"
         port = 80
 
         # work with SSL
