set default profile to "production"

--- a/modules/core/src/main/resources/crashnote.default.conf
+++ b/modules/core/src/main/resources/crashnote.default.conf
@@ -11,6 +11,10 @@ crashnote {
     # disabled by default
     enabled = false
 
+    app {
+        profile = "production"
+    }
+
     about {
         name = "cn-core"
         version = "SNAPSHOT"
