updated API endpoint to new host

--- a/modules/core/src/main/resources/crashnote.default.conf
+++ b/modules/core/src/main/resources/crashnote.default.conf
@@ -21,7 +21,7 @@ crashnote {
     }
 
     network {
-        host = "send.crashnote.com"
+        host = "send.crashnote.io"
         port = 80
 
         # work with SSL
