added "protocol" configuration option

--- a/modules/core/src/main/resources/crashnote.default.conf
+++ b/modules/core/src/main/resources/crashnote.default.conf
@@ -22,12 +22,7 @@ crashnote {
 
     network {
         host = "send.crashnote.io"
-        port = 80
-
-        # work with SSL
-        ssl = true
-        port-ssl = 443
-
+        protocol = https
         timeout = 5s
     }
 
