simplified network configuration

--- a/modules/core/src/main/resources/crashnote.default.conf
+++ b/modules/core/src/main/resources/crashnote.default.conf
@@ -22,7 +22,7 @@ crashnote {
 
     network {
         host = "send.crashnote.io"
-        protocol = https
+        secure = true
         timeout = 5s
     }
 
