changed default host address to "notify.crashnote.io"

--- a/modules/core/src/main/resources/crashnote.default.conf
+++ b/modules/core/src/main/resources/crashnote.default.conf
@@ -21,7 +21,7 @@ crashnote {
     }
 
     network {
-        host = "send.crashnote.io"
+        host = "notify.crashnote.io"
         secure = true
         timeout = 5s
     }
